# UniteIO

./: .gitignore  .readthedocs.yaml  LICENSE  README.MD  README.md  RELEASING.md  pyproject.toml  pytest.ini  setup.bat  setup.py  shinyapp.py
.github/workflows/: ci.yml  release.yml
docs/: api.rst  conf.py  index.rst  quickstart.rst  requirements.txt
test/: conftest.py  test_adjustable_pool.py  test_application.py  test_helpers.py  test_pool_shutdown.py  test_shared_thread_pool.py  test_stop.py  test_submit.py
uio/: __init__.py  adjustable_pool.py  uniteio.py
uniteio/: __init__.py  adjustable_pool.py  uniteio.py
