[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "uniteio"
version = "0.1.0"
description = "Multiple asyncio event loops sharing one thread-pool executor."
readme = { file = "README.MD", content-type = "text/markdown" }
requires-python = ">=3.14.5"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Danilo Greb Santos", email = "danilo.greb@gmail.com" },
]
keywords = [
    "asyncio",
    "concurrency",
    "executor",
    "free-threading",
    "threading",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=9.0,<10",
    "pytest-cov>=7.0,<8",
]
docs = [
    "Sphinx>=9.1,<10",
    "sphinx-rtd-theme>=3.1,<4",
]
dev = [
    "build>=1.3,<2",
    "pytest>=9.0,<10",
    "pytest-cov>=7.0,<8",
    "Sphinx>=9.1,<10",
    "sphinx-rtd-theme>=3.1,<4",
    "twine>=6.2,<7",
]

[project.urls]
Homepage = "https://github.com/dangreb/UniteIO"
Documentation = "https://uniteio.readthedocs.io/en/latest/"
Repository = "https://github.com/dangreb/UniteIO.git"
Issues = "https://github.com/dangreb/UniteIO/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["uniteio*"]
exclude = ["test*", "wa*"]
